deployments/base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: martian-imperial-year-table
  annotations:
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  type: NodePort
  ports:
    - name: martian-imperial-year-table
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: martian-imperial-year-table
    role: web
